testData/invalid-files/dicontinous-text-bound-annotations/030-login.ann
T1	Location 0 5;16 23	North America
T2	Location 10 23	South America
